// 요구사항 객체정의서 기준 논리 ERD (27개 객체)
// 레거시 family_invite_code와 개발용 plan_preview는 제외한다.
// Paste this file directly into https://dbdiagram.io/

Table family_group {
  id text [pk]
  name text [not null]
  plan text [not null, default: 'FREE']
  created_at datetime [not null]
}

Table family_location {
  family_id text [pk, ref: > family_group.id]
  city text [not null]
  district text [not null]
  updated_at datetime [not null]
}

Table family_member {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  name text [not null]
  role text [not null]
  status text [not null, default: 'ACTIVE']
  is_owner boolean [not null, default: false]
  created_at datetime [not null]
}

Table child {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  name text [not null]
  age_label text [not null]
  photo_storage_path text
  photo_mime_type text
  photo_updated_at datetime
}

Table family_invite_link {
  code_hash text [pk]
  family_id text [not null, ref: > family_group.id]
  created_by_member_id text [ref: > family_member.id]
  expires_at datetime [not null]
  created_at datetime [not null]
  join_count int [not null, default: 0]
  max_uses int
  revoked_at datetime

  Note: '재사용 초대 코드와 ?invite=코드 형식의 공유 링크를 함께 관리한다.'
}

Table family_session {
  token_hash text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [not null, ref: > family_member.id]
  expires_at datetime [not null]
  last_seen_at datetime [not null]
}

Table personal_schedule {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [not null, ref: > family_member.id]
  title text [not null]
  starts_at datetime [not null]
  ends_at datetime [not null]
  has_end_time boolean [not null, default: true]
  kind text [not null, default: 'ROUTINE']
  external_source text
  external_id text
  recurrence_id text
  recurrence_rule text

  indexes {
    (family_id, member_id, external_source, external_id) [unique, name: 'uq_external_schedule']
  }

  Note: '외부 일정 ID가 있는 경우에만 복합 UK를 적용해 같은 외부 일정을 중복 저장하지 않는다.'
}

Table child_schedule {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  child_id text [not null, ref: > child.id]
  title text [not null]
  category text [not null]
  starts_at datetime [not null]
  ends_at datetime [not null]
  has_end_time boolean [not null, default: true]
  source text [not null, default: 'MANUAL']
  created_at datetime [not null]
  recurrence_id text
  recurrence_rule text
}

Table care_intake {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  child_id text [ref: > child.id]
  raw_content text [not null]
  input_type text [not null]
  created_at datetime [not null]
}

Table care_item {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  intake_id text [ref: > care_intake.id]
  child_id text [ref: > child.id]
  child_schedule_id text [ref: > child_schedule.id]
  item_type text [not null]
  title text [not null]
  detail text [not null, default: '']
  starts_at datetime
  confidence text [not null, default: 'LOW']
  status text [not null, default: 'NEEDS_REVIEW']
  created_at datetime [not null]
}

Table care_assignment {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  item_id text [not null, ref: > care_item.id]
  assignee_id text [not null, ref: > family_member.id]
  requested_by_member_id text [ref: > family_member.id]
  status text [not null, default: 'PROPOSED']
  source text [not null]
  created_at datetime [not null]
  responded_at datetime
  completed_at datetime
  note text [not null, default: '']
  reminder_sent_at datetime
}

Table care_exception {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  assignment_id text [not null, ref: > care_assignment.id]
  reason text [not null]
  alternative_member_id text [not null, ref: > family_member.id]
  status text [not null, default: 'PENDING']
  created_at datetime [not null]
}

Table care_handoff {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  assignment_id text [not null, ref: > care_assignment.id]
  from_member_id text [ref: > family_member.id]
  to_member_id text [not null, ref: > family_member.id]
  briefing text [not null]
  special_note text [not null, default: '']
  status text [not null, default: 'PENDING']
  acknowledged_at datetime
}

Table notification {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [ref: > family_member.id]
  title text [not null]
  body text [not null]
  level text [not null, default: 'NORMAL']
  is_read boolean [not null, default: false]
  action_type text
  action_id text
  created_at datetime [not null]

  Note: 'action_type/action_id는 다형성 참조이므로 실제 FK를 두지 않는다.'
}

Table family_data_permission {
  member_id text [pk, ref: > family_member.id]
  scope text [pk]
  is_allowed boolean [not null]
}

Table notification_preference {
  member_id text [pk, ref: > family_member.id]
  app_enabled boolean [not null, default: true]
  daily_digest_enabled boolean [not null, default: true]
  device_enabled boolean [not null, default: false]
}

Table daily_usage {
  family_id text [pk, ref: > family_group.id]
  day text [pk]
  feature text [pk]
  amount int [not null, default: 0]

  Note: '일반 기능은 날짜, AI 채팅은 24시간 롤링 윈도우 시작 시각을 day에 저장한다.'
}

Table assistant_message {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [ref: > family_member.id]
  role text [not null]
  content text [not null]
  created_at datetime [not null]
}

Table emergency_request {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  assignment_id text [not null, ref: > care_assignment.id]
  requested_by_member_id text [not null, ref: > family_member.id]
  reason text [not null]
  status text [not null, default: 'OPEN']
  claimed_by_member_id text [ref: > family_member.id]
  created_at datetime [not null]
  resolved_at datetime
}

Table media_asset {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  child_id text [ref: > child.id]
  assignment_id text [ref: > care_assignment.id]
  uploaded_by_member_id text [ref: > family_member.id]
  kind text [not null, default: 'ALBUM']
  storage_path text
  date_folder text
  file_name text [not null]
  mime_type text [not null]
  content_base64 text [not null]
  caption text [not null, default: '']
  created_at datetime [not null]
}

Table device_alert_outbox {
  id text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [not null, ref: > family_member.id]
  assignment_id text [ref: > care_assignment.id]
  title text [not null]
  body text [not null]
  status text [not null, default: 'NOT_CONNECTED']
  created_at datetime [not null]
}

Table push_device_token {
  token text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [not null, ref: > family_member.id]
  platform text [not null, default: 'ANDROID']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table member_benefit_location {
  family_id text [pk, ref: > family_group.id]
  member_id text [pk, ref: > family_member.id]
  city text [not null]
  district text [not null]
  updated_at datetime [not null]
}

Table family_subscription {
  family_id text [pk, ref: > family_group.id]
  provider text [not null, default: 'TOSS']
  customer_key text [not null, unique]
  billing_key text
  status text [not null, default: 'PENDING']
  amount int [not null, default: 7900]
  current_period_start datetime
  current_period_end datetime
  next_billing_at datetime
  cancel_at_period_end boolean [not null, default: false]
  canceled_at datetime
  renewal_failure_count int [not null, default: 0]
  last_renewal_error text
  last_auth_key_hash text
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table payment_transaction {
  order_id text [pk]
  family_id text [not null, ref: > family_group.id]
  provider text [not null, default: 'TOSS']
  amount int [not null]
  status text [not null]
  payment_key text
  approved_at datetime
  created_at datetime [not null]
}

Table calendar_oauth_state {
  state text [pk]
  family_id text [not null, ref: > family_group.id]
  member_id text [not null, ref: > family_member.id]
  provider text [not null]
  expires_at datetime [not null]
  return_url text
}

Table calendar_connection {
  family_id text [pk, ref: > family_group.id]
  member_id text [pk, ref: > family_member.id]
  provider text [pk]
  access_token text [not null]
  refresh_token text
  expires_at datetime
  connected_at datetime [not null]
  synced_at datetime
}

TableGroup A_family_members_children {
  family_group
  family_location
  family_member
  child
}

TableGroup B_auth_invitation {
  family_invite_link
  family_session
}

TableGroup C_schedules {
  personal_schedule
  child_schedule
}

TableGroup D_care_pipeline {
  care_intake
  care_item
  care_assignment
  care_exception
  care_handoff
}

TableGroup E_notifications_settings {
  notification
  family_data_permission
  notification_preference
}

TableGroup F_usage_ai {
  daily_usage
  assistant_message
}

TableGroup G_emergency_media_devices {
  emergency_request
  media_asset
  device_alert_outbox
  push_device_token
}

TableGroup H_benefits_subscription_payment {
  member_benefit_location
  family_subscription
  payment_transaction
}

TableGroup I_calendar_integration {
  calendar_oauth_state
  calendar_connection
}
